crates/ditto-checker/tests/golden/type-errors/not_a_function_1.ditto
module Test exports (..);

huh = 5 |> 5;
